--- a/2nd-project/style.css
+++ b/2nd-project/style.css
@@ -76,7 +76,7 @@
             background-color: #ffffff;
             align-items: flex-start;
             padding: 15px;
-            margin: 15px
+            margin: 15px;
             box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
         }
         .player-details{
@@ -147,7 +147,7 @@
         
            /* Mobile Devises */
         
-           @media  only screen and (max-width:688px) {
+           @media  only screen and (max-width:688px){
         
             header{
                    
@@ -181,4 +181,5 @@
             height: 80px;
             margin: 0 auto;
         }
-        
+
+    }
